Translate feedback.html via GitLocalize

--- a/src/content/zh-cn/_shared/feedback.html
+++ b/src/content/zh-cn/_shared/feedback.html
@@ -16,6 +16,4 @@
 </button>
 <aside class="success wf-feedback--hidden">{{ success_response }}</aside>
 <aside class="caution wf-feedback--hidden">{{ fail_response }}</aside>
-#cdata-section&gt;<script><#cdata-section>
-{% endframebox %}
-</div></script></p>
+#cdata-section&gt;#cdata-section&gt;<script><#cdata-section></div></script></p>
