Support for expandable elements

--- a/gae/page-base.html
+++ b/gae/page-base.html
@@ -30,7 +30,11 @@
     <!-- loads the code prettifier -->
     <script async src="/wf-local/scripts/prettify-bundle.js" onload="prettyPrint();">
     </script>
-    <script async src="/wf-local/scripts/footer-closure.js" onload="devsite.kennedy.InitializeTabbars();">
+    <script src="/wf-local/scripts/jquery-bundle.js"></script>
+    <script src="/wf-local/scripts/script_foot_closure.js"></script>
+    <script src="/wf-local/scripts/script_foot.js"></script>
+    <script>
+      initDevSite();
     </script>
     {% if servedFromAppEngine %}
       {% include "includes/analytics.html" %}
