--- a/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
+++ b/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
@@ -53,7 +53,7 @@
 
 <aside class="note">
   <b>Note:</b> Other browsers have different criteria for installation, or
-  to trigger the <code>beforeinstallprompt</code> event, check their
+  to trigger the <code>beforeinstallprompt</code> event. Check their
   respective sites for full details:
   <a href="https://docs.microsoft.com/en-us/microsoft-edge/progressive-web-apps#requirements">Edge</a>,
   <a href="https://developer.mozilla.org/en-US/Apps/Progressive/Add_to_home_screen#How_do_you_make_an_app_A2HS-ready">Firefox</a>,
