--- a/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
+++ b/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
@@ -51,13 +51,12 @@
   event that you can use to prompt the user to install your Progressive Web App.
 </p>
 
-<aside class="note">
-  <b>Note:</b> Other browsers have different criteria for installation, or
-  to trigger the <code>beforeinstallprompt</code> event. Check their
-  respective sites for full details:
-  <a href="https://docs.microsoft.com/en-us/microsoft-edge/progressive-web-apps#requirements">Edge</a>,
-  <a href="https://developer.mozilla.org/en-US/Apps/Progressive/Add_to_home_screen#How_do_you_make_an_app_A2HS-ready">Firefox</a>,
-  <a href="https://dev.opera.com/articles/installable-web-apps/">Opera</a>,
-  <a href="https://samsunginter.net/docs/ambient-badging">Samsung Internet</a>, and
-  <a href="https://plus.ucweb.com/docs/pwa/docs-en/zvrh56">UC Browser</a>.
-</aside>
+Other browsers have different criteria for installation, or
+to trigger the <code>beforeinstallprompt</code> event. Check their
+respective sites for full details:
+<a href="https://docs.microsoft.com/en-us/microsoft-edge/progressive-web-apps#requirements">Edge</a>,
+<a href="https://developer.mozilla.org/en-US/Apps/Progressive/Add_to_home_screen#How_do_you_make_an_app_A2HS-ready">Firefox</a>,
+<a href="https://dev.opera.com/articles/installable-web-apps/">Opera</a>,
+<a href="https://samsunginter.net/docs/ambient-badging">Samsung Internet</a>, and
+<a href="https://plus.ucweb.com/docs/pwa/docs-en/zvrh56">UC Browser</a>.
+
