Adding in tranlate attribution.

--- a/src/content/vi/_shared/machine-translation-start.html
+++ b/src/content/vi/_shared/machine-translation-start.html
@@ -1,1 +1,2 @@
 <span lang="vi-x-mtfrom-en">
+  <p><a href="https://translate.google.com"></a><img src="/images/powered-by-translate.svg" alt="Powered by Translate" /></a></p>
