--- a/src/content/zh-cn/_shared/machine-translation-start.html
+++ b/src/content/zh-cn/_shared/machine-translation-start.html
@@ -1,1 +1,2 @@
 <span lang="zh-cn-x-mtfrom-en">
+  <p><a href="https://translate.google.com"></a><img src="/images/powered-by-translate.svg" alt="Powered by Translate" /></a></p>
