--- a/src/content/pt-br/_shared/machine-translation-start.html
+++ b/src/content/pt-br/_shared/machine-translation-start.html
@@ -1,2 +1,2 @@
 <span lang="pt-x-mtfrom-en">
-  <p><a href="https://translate.google.com"></a><img src="/images/powered-by-translate.svg" alt="Powered by Translate" /></a></p>
+  <p><a href="https://translate.google.com"><img src="/web/images/powered-by-translate.svg" alt="Powered by Google Translate" /></a></p>
