--- a/src/content/en/tools/workbox/reference-docs/latest/workbox.routing.Route.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/workbox.routing.Route.html
@@ -193,7 +193,7 @@
                               </td>
                               <td>
                                 <p class="details-table-types">FetchEvent</p>
-                                <p>The service worker<code>s</code>fetch` event.
+                                <p>The service worker's <code>fetch</code> event.
                                 </p>
                               </td>
                             </tr>
