minor typo fixes
surpresses -> suppresses

--- a/src/content/en/fundamentals/design-and-ux/input/touch/_code/forced-states-example.html
+++ b/src/content/en/fundamentals/design-and-ux/input/touch/_code/forced-states-example.html
@@ -43,7 +43,7 @@
 
 	  background-color: #4285f4;
 
-	  /* background-image: none; used to surpress changes in style on FF OS */
+	  /* background-image: none; used to suppress changes in style on FF OS */
 	  background-image: none;
 	}
 
@@ -58,7 +58,7 @@
 	button.focus {
 	  background-color: #0F52C1;
 
-	  /* The outline parameter surpresses the border color / outline when focused */
+	  /* The outline parameter suppresses the border color / outline when focused */
 	  outline: 0;
 	}
 
