--- a/src/content/en/fundamentals/discovery/social-discovery/_code/social-sites2.html
+++ b/src/content/en/fundamentals/discovery/social-discovery/_code/social-sites2.html
@@ -8,13 +8,13 @@
     <!-- define ogp and itemprop of microdata in one line -->
     <meta property="og:title" itemprop="name" content="Enjoy Fireworks">
     <!-- define ogp image -->
-    <meta property="og:image" content=
-     "https://developers.google.com/web/imgs/fireworks.jpg">
+    <meta property="og:image"
+          content="https://developers.google.com/web/imgs/fireworks.jpg">
     <!-- use link[href] to define image url for microdata -->
     <link itemprop="image" href="//developers.google.com/web/imgs/fireworks.jpg">
     <!-- define ogp and itemprop of microdata in one line -->
-    <meta property="og:url" content=
-     "{{site.sample_link_base}}discovery-and-distribution/optimizations-for-crawlers/social-sites2.html">
+    <meta property="og:url"
+          content="https://example.com/discovery-and-distribution/optimizations-for-crawlers/social-sites2.html">
     <!-- define ogp type -->
     <meta property="og:type" content="website">
     <!-- define twitter cards type -->
@@ -23,10 +23,10 @@
     <meta name="twitter:site" content="agektmr">
     <!-- define description for ogp and itemprop of microdata in one line -->
     <meta property="og:description" itemprop="description"
-     content="Fireworks are beautiful. This article explains how beautiful fireworks are.">
+          content="Fireworks are beautiful. This article explains how beautiful fireworks are.">
     <!-- general description (separate with ogp and microdata) -->
-    <meta name="description" content="Fireworks are beautiful.
-     This article explains how beautiful fireworks are.">
+    <meta name="description"
+          content="Fireworks are beautiful. This article explains how beautiful fireworks are.">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
