surpress(es) -> suppress(es)

--- a/src/content/en/fundamentals/design-and-ux/input/touch/_code/states-example.html
+++ b/src/content/en/fundamentals/design-and-ux/input/touch/_code/states-example.html
@@ -63,7 +63,7 @@
       .btn:focus {
         background-color: #0F52C1;
 
-        /* The outline parameter surpresses the border
+        /* The outline parameter suppresses the border
         color / outline when focused */
         outline: 0;
       }
