--- a/src/content/en/fundamentals/design-and-ux/input/touch/_code/user-select-example.html
+++ b/src/content/en/fundamentals/design-and-ux/input/touch/_code/user-select-example.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>user-select Example</title>
-    
+
     <!-- IE Specific to remove tap highlight -->
     <meta name="msapplication-tap-highlight" content="no">
 
@@ -71,7 +71,7 @@
 
       button:focus {
         background-color: #8D0600;
-        /* The outline parameter surpresses the border color / outline when focused */
+        /* The outline parameter suppresses the border color / outline when focused */
         outline: 0;
       }
 
