--- a/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
+++ b/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
@@ -49,6 +49,8 @@
 <p>
   When these criteria are met, Chrome will fire a <code>beforeinstallprompt</code>
   event that you can use to prompt the user to install your Progressive Web App.
+  See <a href="/web/fundamentals/app-install-banners/#listen_for_beforeinstallprompt">Listen
+  for <code>beforeinstallprompt</code></a>.
 </p>
 
 Other browsers have different criteria for installation, or
