add link to github in the "yes" response

--- a/src/content/en/_shared/helpful.html
+++ b/src/content/en/_shared/helpful.html
@@ -7,9 +7,7 @@
     position: static;
   }
 </style>
-
 <p>Was this page helpful?</p>
-
 <div class="helpful--container">
   <section class="expandable helpful--section">
     <button class="button button-primary expand-control gc-analytics-event"
@@ -19,7 +17,8 @@
       Yes
     </button>
     <aside class="success">
-      Great! Thank you for the feedback.
+      Great! Thank you for the feedback. If you have any ideas on how we can improve, please
+      <a href="https://github.com/google/WebFundamentals/issues/new">open an issue</a>.
     </aside>
   </section>
   <section class="expandable helpful--section">
