--- a/src/content/en/tools/chrome-devtools/beginners/_code/final.html
+++ b/src/content/en/tools/chrome-devtools/beginners/_code/final.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
-  <body>
-    <header>
-      <p>Welcome to my site!</p>
-    </header>
-    <nav>
-      <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/contact.html">Contact</a></li>
-      </ul>
-    </nav>
-    <main>
-      <h1>About Me</h1>
-      <p>I am learning web development. Recent accomplishments:</p>
-      <ul>
-        <li>Learned how to set up my code in Glitch.</li>
-        <li>Added content to my HTML.</li>
-        <li>Learned how to use Chrome DevTools to experiment with content changes.</li>
-        <li>Learned the difference between HTML and the DOM.</li>
-      </ul>
-    </main>
-  </body>
-</html>
+&lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+  &lt;head&gt;
+    &lt;meta charset="utf-8"&gt;
+    &lt;meta http-equiv="X-UA-Compatible" content="IE=edge"&gt;
+    &lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;
+  &lt;/head&gt;
+  &lt;body&gt;
+    &lt;header&gt;
+      &lt;p&gt;Welcome to my site!&lt;/p&gt;
+    &lt;/header&gt;
+    &lt;nav&gt;
+      &lt;ul&gt;
+        &lt;li&gt;&lt;a href="/"&gt;Home&lt;/a&gt;&lt;/li&gt;
+        &lt;li&gt;&lt;a href="/contact.html"&gt;Contact&lt;/a&gt;&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/nav&gt;
+    &lt;main&gt;
+      &lt;h1&gt;About Me&lt;/h1&gt;
+      &lt;p&gt;I am learning web development. Recent accomplishments:&lt;/p&gt;
+      &lt;ul&gt;
+        &lt;li&gt;Learned how to set up my code in Glitch.&lt;/li&gt;
+        &lt;li&gt;Added content to my HTML.&lt;/li&gt;
+        &lt;li&gt;Learned how to use Chrome DevTools to experiment with content changes.&lt;/li&gt;
+        &lt;li&gt;Learned the difference between HTML and the DOM.&lt;/li&gt;
+      &lt;/ul&gt;
+    &lt;/main&gt;
+  &lt;/body&gt;
+&lt;/html&gt;
