--- a/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
+++ b/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
@@ -59,6 +59,6 @@ respective sites for full details:
 <a href="https://docs.microsoft.com/en-us/microsoft-edge/progressive-web-apps#requirements">Edge</a>,
 <a href="https://developer.mozilla.org/en-US/Apps/Progressive/Add_to_home_screen#How_do_you_make_an_app_A2HS-ready">Firefox</a>,
 <a href="https://dev.opera.com/articles/installable-web-apps/">Opera</a>,
-<a href="https://samsunginter.net/docs/ambient-badging">Samsung Internet</a>, and
+<a href="https://hub.samsunginter.net/docs/ambient-badging/">Samsung Internet</a>, and
 <a href="https://plus.ucweb.com/docs/pwa/docs-en/zvrh56">UC Browser</a>.
 
