Redirect manual actions

--- a/src/content/ar/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/ar/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -16,7 +16,7 @@
 <p>إذا لم تكن متأكدًا مما إذا تم الاستيلاء على موقعك أو إذا اعتقدت
    أنه تم وضع علامة على موقعك عن طريق الخطأ، فابدأ بتسجيل موقعك في <a href="https://www.google.com/webmasters/tools/home">
   Search Console</a>. انتقل إلى قسمي
-  <a href="https://www.google.com/webmasters/tools/manual-action">الإجراءات اليدوية</a> أو
+  <a href="https://search.google.com/search-console/manual-actions">الإجراءات اليدوية</a> أو
   <a href="https://www.google.com/webmasters/tools/security-issues">مشكلات الأمان</a>
   في Search Console وابحث عن أمثلة عناوين URL التي اكتشف Google منها أنه قد تم الاستيلاء على موقعك.</p>
 
