--- a/src/content/hi/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/hi/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -15,7 +15,7 @@
 <p>अगर आपको पक्के तौर पर नहीं पता है कि आपकी साइट वास्तव में हैक की गई है या नहीं या अगर आपको लगता है कि
   आपकी साइट को गलत तरीके से फ़्लैग किया गया था, तो <a href="https://www.google.com/webmasters/tools/home">
   Search Console</a> में अपनी साइट को पंजीकृत करके शुरू करें. Search Console के
-  <a href="https://www.google.com/webmasters/tools/manual-action">मानवीय कार्यवाही</a> या
+  <a href="https://search.google.com/search-console/manual-actions">मानवीय कार्यवाही</a> या
   <a href="https://www.google.com/webmasters/tools/security-issues">सुरक्षा समस्याएं</a>
   अनुभाग पर जाएं और यूआरएल के उदाहरण देखें, जहां Google ने इस बात का पता लगाया है कि
   आपकी साइट हैक कर ली गई है या नहीं.</p>
