--- a/src/content/ko/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/ko/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -12,7 +12,7 @@
 <li>사이트가 실제로 해킹당했는지 확실하지 않은 경우</li>
 </ul>
 
-<p>사이트가 실제로 해킹당했는지 확실하지 않거나 경고가 잘못 표시되었다고 생각되면 먼저 <a href="https://www.google.com/webmasters/tools/home">Search Console</a>에 사이트를 등록하세요. Search Console의 <a href="https://www.google.com/webmasters/tools/manual-action">직접 조치</a> 또는 <a href="https://www.google.com/webmasters/tools/security-issues">보안 문제</a> 섹션으로 이동하여 Google에서 사이트가 해킹당했다는 것을 감지한 예시 URL을 찾으세요.</p>
+<p>사이트가 실제로 해킹당했는지 확실하지 않거나 경고가 잘못 표시되었다고 생각되면 먼저 <a href="https://www.google.com/webmasters/tools/home">Search Console</a>에 사이트를 등록하세요. Search Console의 <a href="https://search.google.com/search-console/manual-actions">직접 조치</a> 또는 <a href="https://www.google.com/webmasters/tools/security-issues">보안 문제</a> 섹션으로 이동하여 Google에서 사이트가 해킹당했다는 것을 감지한 예시 URL을 찾으세요.</p>
 
 <p>Search Console에 제공된 URL에 해킹된 콘텐츠가 표시되지 않으면 해킹된 콘텐츠에서 <a href="//support.google.com/webmasters/answer/66355">클로킹</a>이라고 하는 기법을 사용하고 있을 수 있습니다.
   클로킹을 사용하면 사용자 유형에 따라 다른 콘텐츠가 표시되어 사이트를 정리하기가 더 어렵게 됩니다. 예를 들어, 사이트에서 www.example.com/cheap-drugs와 같은 페이지로 이동하는 경우 콘텐츠가 없는 페이지가 표시될 수 있습니다. 이 때문에 사이트에 해킹된 콘텐츠가 존재하지 않는다고 생각할 수 있습니다. 그러나 Google과 같은 검색 엔진에서 www.example.com/cheap-drugs에 액세스하면 스팸성 단어와 링크가 표시됩니다.</p>
