--- a/src/content/pl/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/pl/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -12,7 +12,7 @@
 <li>Nie masz pewności, czy Twoja witryna została zaatakowana przez hakerów.</li>
 </ul>
 
-<p>Jeśli nie masz pewności, czy Twoja witryna została zaatakowana przez hakerów lub uważasz, że jest oznaczona nieprawidłowo, przede wszystkim zarejestruj witrynę w <a href="https://www.google.com/webmasters/tools/home">Search Console</a>. Kliknij <a href="https://www.google.com/webmasters/tools/manual-action">Ręczne działania</a> lub <a href="https://www.google.com/webmasters/tools/security-issues">Problemy dotyczące bezpieczeństwa</a> w Search Console i odszukaj przykładowe adresy URL, w których wykryliśmy atak hakerów.</p>
+<p>Jeśli nie masz pewności, czy Twoja witryna została zaatakowana przez hakerów lub uważasz, że jest oznaczona nieprawidłowo, przede wszystkim zarejestruj witrynę w <a href="https://www.google.com/webmasters/tools/home">Search Console</a>. Kliknij <a href="https://search.google.com/search-console/manual-actions">Ręczne działania</a> lub <a href="https://www.google.com/webmasters/tools/security-issues">Problemy dotyczące bezpieczeństwa</a> w Search Console i odszukaj przykładowe adresy URL, w których wykryliśmy atak hakerów.</p>
 
 <p>Jeśli pod adresami URL podanymi w Search Console nie widzisz treści zmodyfikowanych przez hakerów, być może zastosowana została technika <a href="//support.google.com/webmasters/answer/66355">maskowania</a>.
   Zasadniczo maskowanie polega na przedstawianiu odmiennych treści różnym użytkownikom. Jeśli na przykład otworzysz w swojej witrynie stronę taką jak www.example.com/tanie-leki, możliwe, że zobaczysz pustą stronę. Być może uznasz, że treść Twojej witryny nie została zmodyfikowana. Jednak wyszukiwarka, na przykład Google, znajdzie na stronie www.example.com/tanie-leki spamerskie słowa i linki.</p>
