--- a/src/content/ru/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/ru/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -12,7 +12,7 @@
 <li>вы точно не знаете, взломан ли ваш сайт.</li>
 </ul>
 
-<p>Если вы не уверены, что ваш сайт действительно взломан или считаете, что ваш сайт был ошибочно помечен как взломанный, сначала зарегистрируйте его в <a href="https://www.google.com/webmasters/tools/home">Search Console</a>. Перейдите в раздел <a href="https://www.google.com/webmasters/tools/manual-action">Меры, принятые вручную</a>, или <a href="https://www.google.com/webmasters/tools/security-issues">Проблемы безопасности</a> и найдите URL, указанные в оповещении от Google.</p>
+<p>Если вы не уверены, что ваш сайт действительно взломан или считаете, что ваш сайт был ошибочно помечен как взломанный, сначала зарегистрируйте его в <a href="https://www.google.com/webmasters/tools/home">Search Console</a>. Перейдите в раздел <a href="https://search.google.com/search-console/manual-actions">Меры, принятые вручную</a>, или <a href="https://www.google.com/webmasters/tools/security-issues">Проблемы безопасности</a> и найдите URL, указанные в оповещении от Google.</p>
 
 <p>Если вы не видите взломанный контент по URL, указанным в Search Console, возможно, злоумышленники использовали <a href="//support.google.com/webmasters/answer/66355">маскировку</a>.
   Она усложняет очистку сайта, поскольку разные пользователи в этом случае видят разный контент. Например, при переходе на страницу своего сайта (пусть это будет страница www.example.com/deshevye-lekarstva) вы можете увидеть пустую страницу и подумать, что на сайте нет вредоносного контента. Однако при сканировании этой же страницы поисковая система, например Google, найдет на ней спам в виде текста и ссылок.</p>
