--- a/src/content/vi/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/vi/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -15,7 +15,7 @@
 <p>Nếu bạn không chắc liệu trang web của mình có thực sự bị tấn công không hoặc nếu bạn nghĩ trang web của mình bị gắn cờ
   không chính xác, hãy bắt đầu bằng cách đăng ký trang web trong
   <a href="https://www.google.com/webmasters/tools/home">Search Console</a>. Đi đến phần
-  <a href="https://www.google.com/webmasters/tools/manual-action">Thao tác thủ công</a> hoặc
+  <a href="https://search.google.com/search-console/manual-actions">Thao tác thủ công</a> hoặc
   <a href="https://www.google.com/webmasters/tools/security-issues">Vấn đề bảo mật</a> của Search Console và tìm các URL ví dụ mà tại đó Google phát hiện thấy rằng
   trang web của bạn đã bị tấn công.</p>
 
