--- a/src/content/zh-cn/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/zh-cn/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -12,7 +12,7 @@
 <li>您不确定自己的网站是否真的遭到了入侵</li>
 </ul>
 
-<p>如果您不确定自己的网站是否真的遭到了入侵，或者认为自己的网站遭到了错误的标记，请先在 <a href="https://www.google.com/webmasters/tools/home">Search Console</a> 中注册您的网站。然后，请转到 Search Console 的<a href="https://www.google.com/webmasters/tools/manual-action">手动操作</a>或<a href="https://www.google.com/webmasters/tools/security-issues">安全问题</a>部分，并查找 Google 在其中检测到您的网站遭到了入侵的示例网址。</p>
+<p>如果您不确定自己的网站是否真的遭到了入侵，或者认为自己的网站遭到了错误的标记，请先在 <a href="https://www.google.com/webmasters/tools/home">Search Console</a> 中注册您的网站。然后，请转到 Search Console 的<a href="https://search.google.com/search-console/manual-actions">手动操作</a>或<a href="https://www.google.com/webmasters/tools/security-issues">安全问题</a>部分，并查找 Google 在其中检测到您的网站遭到了入侵的示例网址。</p>
 
 <p>如果您在 Search Console 中提供的网址中看不到被黑内容，则被黑内容可能采用了<a href="//support.google.com/webmasters/answer/66355">隐藏真实内容</a>这种手段。隐藏真实内容增大了清理网站的难度，因为它会向不同类型的用户显示不同的内容。例如，当您转到您网站上的某个网页（例如 www.example.com/cheap-drugs）后，您可能会看到一个没有任何内容的网页。这可能会导致您认为网站上的被黑内容并不存在。不过，当 Google 等搜索引擎访问 www.example.com/cheap-drugs 时，则会看到垃圾内容字词和链接。</p>
 
