--- a/src/content/zh-tw/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/zh-tw/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -12,7 +12,7 @@
 <li>不確定您的網站是否確實遭到入侵</li>
 </ul>
 
-<p>如果您不確定網站是否確實遭到入侵，或是認為我們判斷有誤，請先在 <a href="https://www.google.com/webmasters/tools/home">Search Console</a> 中註冊您的網站，然後前往「<a href="https://www.google.com/webmasters/tools/manual-action">專人介入處理</a>」或「<a href="https://www.google.com/webmasters/tools/security-issues">安全性問題</a>」部分查看 Google 偵測到您網站遭入侵的網址示例。</p>
+<p>如果您不確定網站是否確實遭到入侵，或是認為我們判斷有誤，請先在 <a href="https://www.google.com/webmasters/tools/home">Search Console</a> 中註冊您的網站，然後前往「<a href="https://search.google.com/search-console/manual-actions">專人介入處理</a>」或「<a href="https://www.google.com/webmasters/tools/security-issues">安全性問題</a>」部分查看 Google 偵測到您網站遭入侵的網址示例。</p>
 
 <p>如果您在 Search Console 提供的網址看不到遭入侵的內容，可能是攻擊者針對入侵內容使用了所謂的<a href="//support.google.com/webmasters/answer/66355">偽裝</a>手法。這種手法會向不同類型的使用者顯示不同的內容，使網站清理作業更加困難。舉例來說，假設您造訪網站上的 www.example.com/cheap-drugs 這個網頁，可能會看到內容空白的頁面，因而誤認為您網站上沒有遭到入侵的內容。不過，當 Google 或其他搜尋引擎存取 www.example.com/cheap-drugs 時，就會找到垃圾字詞和連結。</p>
 
