--- a/src/content/ja/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/ja/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -12,7 +12,7 @@
 <li>サイトが実際にハッキングされているかどうかわからない場合</li>
 </ul>
 
-<p>サイトが実際にハッキングされているかどうかわからない場合、またはサイトのフラグ付けが間違っていると思われる場合は、まず <a href="https://www.google.com/webmasters/tools/home">Search Console</a> にサイトを登録してください。Search Console の [<a href="https://www.google.com/webmasters/tools/manual-action">手動による対策</a>] または [<a href="https://www.google.com/webmasters/tools/security-issues">セキュリティの問題</a>] に移動し、Google でサイトがハッキングされていることが検出された URL などを確認します。</p>
+<p>サイトが実際にハッキングされているかどうかわからない場合、またはサイトのフラグ付けが間違っていると思われる場合は、まず <a href="https://www.google.com/webmasters/tools/home">Search Console</a> にサイトを登録してください。Search Console の [<a href="https://search.google.com/search-console/manual-actions">手動による対策</a>] または [<a href="https://www.google.com/webmasters/tools/security-issues">セキュリティの問題</a>] に移動し、Google でサイトがハッキングされていることが検出された URL などを確認します。</p>
 
 <p>Search Console に指定した URL でコンテンツのハッキングを確認できない場合、そのハッキングされたコンテンツで<a href="//support.google.com/webmasters/answer/66355">クローキング</a>という手法が使われている可能性があります。クローキングとは、ユーザーのタイプによって表示するコンテンツを変えることでサイトの問題を修正しにくくする手法です。たとえば、www.example.com/cheap-drugs というサイト上のあるページにアクセスすると、コンテンツが一切ないページが表示されることがあります。このため、サイト上でコンテンツのハッキングは発生していないと思いがちですが、Google などの検索エンジンが www.example.com/cheap-drugs にアクセスすると、スパム行為のある単語やリンクが表示されます。</p>
 
