--- a/src/content/th/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
+++ b/src/content/th/fundamentals/security/hacked/how_do_I_know_if_site_hacked.html
@@ -12,7 +12,7 @@
 <li>คุณไม่แน่ใจว่าไซต์ถูกแฮ็กจริงหรือไม่</li>
 </ul>
 
-<p>หากคุณไม่แน่ใจว่าไซต์ถูกแฮ็กจริงหรือไม่ หรือคิดว่าไซต์ถูกตั้งค่าสถานะอย่างไม่ถูกต้อง ให้เริ่มด้วยการลงทะเบียนไซต์ใน <a href="https://www.google.com/webmasters/tools/home">Search Console</a> ไปที่ส่วน<a href="https://www.google.com/webmasters/tools/manual-action">การดำเนินการโดยเจ้าหน้าที่</a>หรือ<a href="https://www.google.com/webmasters/tools/security-issues">ปัญหาด้านความปลอดภัย</a>ของ Search Console แล้วมองหาตัวอย่าง URL ที่ Google ตรวจพบว่าถูกแฮ็กในไซต์</p>
+<p>หากคุณไม่แน่ใจว่าไซต์ถูกแฮ็กจริงหรือไม่ หรือคิดว่าไซต์ถูกตั้งค่าสถานะอย่างไม่ถูกต้อง ให้เริ่มด้วยการลงทะเบียนไซต์ใน <a href="https://www.google.com/webmasters/tools/home">Search Console</a> ไปที่ส่วน<a href="https://search.google.com/search-console/manual-actions">การดำเนินการโดยเจ้าหน้าที่</a>หรือ<a href="https://www.google.com/webmasters/tools/security-issues">ปัญหาด้านความปลอดภัย</a>ของ Search Console แล้วมองหาตัวอย่าง URL ที่ Google ตรวจพบว่าถูกแฮ็กในไซต์</p>
 
 <p>หากคุณไม่สามารถดูเนื้อหาที่ถูกแฮ็กใน URL ที่ระบุใน Search Console เนื้อหานั้นอาจใช้เทคนิคชื่อ<a href="//support.google.com/webmasters/answer/66355">การปิดบังหน้าเว็บจริง</a>
   การปิดบังหน้าเว็บจริงอาจทำให้คุณทำความสะอาดไซต์ได้ยากขึ้นเพราะมีการแสดงเนื้อหาที่แตกต่างกันแก่ผู้ใช้ต่างประเภท เช่น เมื่อคุณไปที่หน้า www.example.com/cheap-drugs คุณอาจเห็นหน้าที่ไม่มีเนื้อหาใดๆ เลย ซึ่งอาจทำให้คุณเชื่อว่าเนื้อหาในไซต์ไม่ได้ถูกแฮ็ก อย่างไรก็ตาม เมื่อเครื่องมือค้นหาอย่างเช่น Google เข้าถึง www.example.com/cheap-drugs ก็จะเห็นคำและลิงก์ที่เป็นสแปม</p>
