Lots of Workbox v4 updates.

--- a/src/content/en/tools/workbox/_shared/config/single/modifyUrlPrefix.html
+++ b/src/content/en/tools/workbox/_shared/config/single/modifyUrlPrefix.html
@@ -1,6 +1,6 @@
-<tr id="{{ anchor_prefix }}modifyUrlPrefix">
+<tr id="{{ anchor_prefix }}modifyURLPrefix">
   <td>
-    <p>modifyUrlPrefix</p>
+    <p>modifyURLPrefix</p>
   </td>
   <td>
     <p>
@@ -23,7 +23,7 @@
     <p>
       <strong>Example:</strong>
     </p>
-    <pre class="prettyprint">modifyUrlPrefix: {
+    <pre class="prettyprint">modifyURLPrefix: {
   // Remove a '/dist' prefix from the URLs:
   '/dist': ''
 }</pre>
