--- a/src/content/en/tools/workbox/_shared/config/single/templatedUrls.html
+++ b/src/content/en/tools/workbox/_shared/config/single/templatedUrls.html
@@ -1,6 +1,6 @@
-<tr id="{{ anchor_prefix }}templatedUrls">
+<tr id="{{ anchor_prefix }}templatedURLs">
   <td>
-    <p>templatedUrls</p>
+    <p>templatedURLs</p>
   </td>
   <td>
     <p>
@@ -22,7 +22,7 @@
     <p>
       <strong>Example:</strong>
     </p>
-    <pre class="prettyprint">templatedUrls: {
+    <pre class="prettyprint">templatedURLs: {
   '/app-shell': [
     'dev/templates/app-shell.hbs',
     'dev/**/*.css',
