--- a/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
+++ b/src/content/en/fundamentals/app-install-banners/_a2hs-criteria.html
@@ -7,7 +7,15 @@
 </p>
 
 <ul>
-  <li>The web app is not already installed</li>
+  <li>
+    The web app is not already installed.
+    <ul>
+      <li>
+        and <code><a href="/web/fundamentals/app-install-banners/native">prefer_related_applications</a></code>
+        is not <code>true</code>.
+      </li>
+    </ul>
+  </li>
   <li>
     Meets a user engagement heuristic (currently, the user has interacted
     with the domain for at least 30 seconds)
@@ -47,8 +55,10 @@
 </ul>
 
 <p>
-  When these criteria are met, Chrome will fire a <code>beforeinstallprompt</code>
-  event that you can use to prompt the user to install your Progressive Web App.
+  When these criteria are met, will fire a <code>beforeinstallprompt</code>
+  event that you can use to prompt the user to install your Progressive Web App,
+  and may show a
+  <a href="/web/fundamentals/app-install-banners/#mini-info-bar">mini-info bar</a>.
   See <a href="/web/fundamentals/app-install-banners/#listen_for_beforeinstallprompt">Listen
   for <code>beforeinstallprompt</code></a>.
 </p>
@@ -61,4 +71,3 @@ respective sites for full details:
 <a href="https://dev.opera.com/articles/installable-web-apps/">Opera</a>,
 <a href="https://hub.samsunginter.net/docs/ambient-badging/">Samsung Internet</a>, and
 <a href="https://plus.ucweb.com/docs/pwa/docs-en/zvrh56">UC Browser</a>.
-
