--- a/src/content/en/_shared/helpful.html
+++ b/src/content/en/_shared/helpful.html
@@ -1,7 +1,3 @@
-{% setvar response %}
-  Thank you for the feedback. If you have specific ideas on how to improve this page, please
-  <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
-{% endsetvar %}
 <div class="devsite-tracking-question">
   <div>Was this page helpful?</div>
   <div class="gc-analytics-event"
@@ -14,31 +10,46 @@
            data-category="Goals" data-value="1"
            data-label="{% dynamic print request.path %}">
         <div>It helped me complete my goal(s)</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
       <div class="gc-analytics-event"
            data-category="Completeness" data-value="1"
            data-label="{% dynamic print request.path %}">
         <div>It had the information I needed</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
       <div class="gc-analytics-event"
            data-category="Accuracy" data-value="1"
            data-label="{% dynamic print request.path %}">
         <div>It had accurate information</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
       <div class="gc-analytics-event"
            data-category="Writing" data-value="1"
            data-label="{% dynamic print request.path %}">
         <div>It was easy to read</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
       <div class="gc-analytics-event"
            data-category="Other" data-value="1"
            data-label="{% dynamic print request.path %}">
         <div>Something else</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
     </div>
   </div>
@@ -52,31 +63,46 @@
            data-category="Goals" data-value="0"
            data-label="{% dynamic print request.path %}">
         <div>It didn't help me complete my goal(s)</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
       <div class="gc-analytics-event"
            data-category="Completeness" data-value="0"
            data-label="{% dynamic print request.path %}">
         <div>It was missing information I needed</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
       <div class="gc-analytics-event"
            data-category="Accuracy" data-value="0"
            data-label="{% dynamic print request.path %}">
         <div>It had inaccurate information</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
       <div class="gc-analytics-event"
            data-category="Writing" data-value="0"
            data-label="{% dynamic print request.path %}">
         <div>It was hard to read</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
       <div class="gc-analytics-event"
            data-category="Other" data-value="0"
            data-label="{% dynamic print request.path %}">
         <div>Something else</div>
-        <div>{{ response }}</div>
+        <div>
+          Thank you for the feedback. If you have specific ideas on how to improve this page, please
+          <a href="https://github.com/google/webfundamentals/issues/new">create an issue</a>.
+        </div>
       </div>
     </div>
   </div>
