--- a/src/content/en/tools/workbox/_shared/config/groups/common-generate-schema.html
+++ b/src/content/en/tools/workbox/_shared/config/groups/common-generate-schema.html
@@ -21,3 +21,5 @@
 {% include "web/tools/workbox/_shared/config/single/cacheId.html" %}
 
 {% include "web/tools/workbox/_shared/config/single/offlineGoogleAnalytics.html" %}
+
+{% include "web/tools/workbox/_shared/config/single/cleanupOutdatedCaches.html" %}
