Fix auto-generated workbox v4 doc issues

--- a/src/content/en/tools/workbox/reference-docs/latest/index-all.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/index-all.html
@@ -78,6 +78,7 @@
             <li><a href="module-workbox-window.Workbox.html#messageSW">module:workbox-window.Workbox#messageSW</a></li>
             <li><a href="module-workbox-window.Workbox.html#register">module:workbox-window.Workbox#register</a></li>
             <li><a href="module-workbox-window.html#.messageSW">module:workbox-window.messageSW</a></li>
+            <li><a href="workbox.html">workbox</a></li>
             <li><a href="workbox.backgroundSync.html">workbox.backgroundSync</a></li>
             <li><a href="workbox.backgroundSync.Plugin.html">workbox.backgroundSync.Plugin</a></li>
             <li><a href="workbox.backgroundSync.Queue.html">workbox.backgroundSync.Queue</a></li>
@@ -135,6 +136,7 @@
             <li><a href="workbox.rangeRequests.html">workbox.rangeRequests</a></li>
             <li><a href="workbox.rangeRequests.Plugin.html">workbox.rangeRequests.Plugin</a></li>
             <li><a href="workbox.rangeRequests.html#.createPartialResponse">workbox.rangeRequests.createPartialResponse</a></li>
+            <li><a href="workbox.routing.html">workbox.routing</a></li>
             <li><a href="workbox.routing.NavigationRoute.html">workbox.routing.NavigationRoute</a></li>
             <li><a href="workbox.routing.RegExpRoute.html">workbox.routing.RegExpRoute</a></li>
             <li><a href="workbox.routing.Route.html">workbox.routing.Route</a></li>
