--- a/src/content/en/tools/workbox/reference-docs/latest/index.html
+++ b/src/content/en/tools/workbox/reference-docs/latest/index.html
@@ -341,30 +341,21 @@
                 <div class="symbol-index-section">
                   <div class="symbol-index-column">
                     <p class="symbol-index-name">
+                      <a href="workbox.html" class="!symbol-index-name">workbox</a>
+                    </p>
+                    <p class="symbol-index-name">
                       <a href="workbox.html#.loadModule" class="!symbol-index-name">workbox.<wbr>loadModule(moduleName)</a>
-                    </p>
-                    <p class="symbol-index-name">
-                      <a href="workbox.routing.html#.registerNavigationRoute" class="!symbol-index-name">workbox.<wbr>routing.<wbr>registerNavigationRoute</a>
-                    </p>
-                    <p class="symbol-index-name">
-                      <a href="workbox.routing.html#.registerRoute" class="!symbol-index-name">workbox.<wbr>routing.<wbr>registerRoute</a>
                     </p>
                   </div>
                   <div class="symbol-index-column">
-                    <p class="symbol-index-name">
-                      <a href="workbox.routing.html#.setCatchHandler" class="!symbol-index-name">workbox.<wbr>routing.<wbr>setCatchHandler</a>
-                    </p>
-                    <p class="symbol-index-name">
-                      <a href="workbox.routing.html#.setDefaultHandler" class="!symbol-index-name">workbox.<wbr>routing.<wbr>setDefaultHandler</a>
-                    </p>
                     <p class="symbol-index-name">
                       <a href="workbox.html#.setConfig" class="!symbol-index-name">workbox.<wbr>setConfig(options)</a>
                     </p>
-                  </div>
-                  <div class="symbol-index-column">
                     <p class="symbol-index-name">
                       <a href="workbox.html#~ModulePathCallback" class="!symbol-index-name">workbox~<wbr>ModulePathCallback(moduleName, debug)</a>
                     </p>
+                  </div>
+                  <div class="symbol-index-column">
                   </div>
                 </div>
               </div>
@@ -767,6 +758,34 @@
                   <div class="symbol-index-column">
                   </div>
                   <div class="symbol-index-column">
+                  </div>
+                </div>
+              </div>
+            </section>
+            <section>
+              <div class="symbol-index-content">
+                <h2 id="workbox.routing" class="symbol-header">workbox.routing</h2>
+                <div class="symbol-index-section">
+                  <div class="symbol-index-column">
+                    <p class="symbol-index-name">
+                      <a href="workbox.routing.html" class="!symbol-index-name">workbox.<wbr>routing</a>
+                    </p>
+                    <p class="symbol-index-name">
+                      <a href="workbox.routing.html#.registerNavigationRoute" class="!symbol-index-name">workbox.<wbr>routing.<wbr>registerNavigationRoute</a>
+                    </p>
+                  </div>
+                  <div class="symbol-index-column">
+                    <p class="symbol-index-name">
+                      <a href="workbox.routing.html#.registerRoute" class="!symbol-index-name">workbox.<wbr>routing.<wbr>registerRoute</a>
+                    </p>
+                    <p class="symbol-index-name">
+                      <a href="workbox.routing.html#.setCatchHandler" class="!symbol-index-name">workbox.<wbr>routing.<wbr>setCatchHandler</a>
+                    </p>
+                  </div>
+                  <div class="symbol-index-column">
+                    <p class="symbol-index-name">
+                      <a href="workbox.routing.html#.setDefaultHandler" class="!symbol-index-name">workbox.<wbr>routing.<wbr>setDefaultHandler</a>
+                    </p>
                   </div>
                 </div>
               </div>
