--- a/src/content/en/tools/workbox/guides/_shared/register-sw.html
+++ b/src/content/en/tools/workbox/guides/_shared/register-sw.html
@@ -6,7 +6,7 @@
 if ('serviceWorker' in navigator) {
   // Use the window load event to keep the page load performant
   window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/sw.js');
+    navigator.serviceWorker.register('/service-worker.js');
   });
 }
 &lt;/script>
